--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input type="text" id="pensionContributions" required oninput="formatCurrency(this)"><br>
         <button type="submit">Рассчитать</button>
     </form>
+    <div id="maxLoanAmount" style="display: none;"></div>
     <div id="overlay">
         <img id="loadingGif" src="running-man.gif" alt="Running Man">
         <div id="loadingText">Заявка на рассмотрении</div>
