--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <form id="loanForm">
         <label for="fullName">ФИО:</label>
         <input type="text" id="fullName" required><br>
-        <label for="loanDate">Дата:</label>
-        <input type="date" id="loanDate" required><br>
+        <label for="date">Дата:</label>
+        <input type="date" id="date" required><br>
         <label for="desiredAmount">Желаемая сумма кредита (в тенге):</label>
         <input type="text" id="desiredAmount" required oninput="formatCurrency(this)"><br>
         <label for="creditBurden">Кредитная нагрузка (в тенге):</label>
