--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button type="submit">Рассчитать</button>
     </form>
     <div id="resultMessage"></div>
+    <a id="viewResult" href="#" style="display: none;">Посмотреть результат</a>
 </div>
 
 <script src="script.js"></script>
