--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <label for="loanDate">Дата:</label>
         <input type="date" id="loanDate" required><br>
         <label for="desiredAmount">Желаемая сумма кредита (в тенге):</label>
-        <input type="text" id="desiredAmount" required oninput="formatCurrency(this)" pattern="[0-9]*"><br>
+        <input type="text" id="desiredAmount" required oninput="formatCurrency(this)" inputmode="numeric" pattern="[0-9]*"><br>
         <label for="creditBurden">Кредитная нагрузка (в тенге):</label>
-        <input type="text" id="creditBurden" required oninput="formatCurrency(this)" pattern="[0-9]*"><br>
+        <input type="text" id="creditBurden" required oninput="formatCurrency(this)" inputmode="numeric" pattern="[0-9]*"><br>
         <label for="pensionContributions">Пенсионные отчисления за полгода (в тенге):</label>
-        <input type="text" id="pensionContributions" required oninput="formatCurrency(this)" pattern="[0-9]*"><br>
+        <input type="text" id="pensionContributions" required oninput="formatCurrency(this)" inputmode="numeric" pattern="[0-9]*"><br>
         <button type="submit">Рассчитать</button>
     </form>
     <div id="resultMessage"></div>
