--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <button type="submit">Рассчитать</button>
     </form>
     <div id="resultMessage"></div>
-    <a id="viewResult" href="#" style="display: none;" target="_blank">Посмотреть результат</a>
+    <div id="viewResultButton" style="display: none;">
+        <a href="https://drive.google.com/drive/folders/1xHv24Egg1wr9OMKeBVY5XP7oP7h6fTJ8" target="_blank">Посмотреть результат</a>
+    </div>
 </div>
 
 <script src="script.js"></script>
